src/components/ZipView.scss
:global {
  .fullscreen {
    img {
      height: 100vh;
    }

    div {
      transition: none !important;
      -webkit-transition-duration: none !important;
      -moz-transition-duration: none !important;
      -o-transition-duration: none !important;
      transition-duration: none !important;
    }
  }

  .helper {
    margin-top: 10px;
    font-size: small;

    td.key {
      width: 50px;
    }

    code {
      border-radius: 5px;
      background-color: gainsboro;
      padding: 4px;
    }
  }
}

